--- a/lesy_ukrainka/style.css
+++ b/lesy_ukrainka/style.css
@@ -3,6 +3,10 @@ ul {
     padding: 0;
     list-style-type: none;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    /* зовнішні відступи */
+    padding: 0;
+    /* внутрішні відступи */
 }
 
 a {
@@ -27,4 +31,14 @@ th {
 
 td {
     font: 16px Arial, Helvetica, sans-serif;
+}
+
+li {
+    display: inline-block;
+}
+.inline_nav{
+    display: inline-block;
+}
+#nav_1 {
+    margin-right: 40px;
 }
