--- a/lesy_ukrainka/style.css
+++ b/lesy_ukrainka/style.css
@@ -1,12 +1,14 @@
 ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+    
     font-family: Arial, Helvetica, sans-serif;
+   
+}
+.menu{
     margin: 0;
     /* зовнішні відступи */
     padding: 0;
     /* внутрішні відступи */
+    list-style-type: none;
 }
 
 a {
@@ -33,7 +35,7 @@ td {
     font: 16px Arial, Helvetica, sans-serif;
 }
 
-li {
+.inline_li {
     display: inline-block;
 }
 .inline_nav{
