--- a/ukranian/style.css
+++ b/ukranian/style.css
@@ -1,9 +1,14 @@
 ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
     font-family: Arial, Helvetica, sans-serif;
 }
+.menu {
+    margin: 0;
+    /* зовнішні відступи */
+    padding: 0;
+    /* внутрішні відступи */
+    list-style-type: none;
+}
+
 
 a {
     text-decoration: none;
@@ -36,4 +41,40 @@ th {
 
 td {
     font: 16px Arial, Helvetica, sans-serif;
+}
+.inline_li {
+    margin-right: 15px;
+    display: inline-block;
+}
+
+.inline_li:last-child {
+    margin-right: 0px;
+
+}
+
+#navs_inline {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#navs_inline_right {
+    display: flex;
+    justify-content: flex-end;
+    gap:20px;
+
+}
+
+#nav_1 {
+    margin-right: 40px;
+}
+
+#inline_text_and_img {
+    display: flex;
+    gap:20px;
+    align-items: center;
+    justify-content: center;
+}
+img{
+    width: 200px;
 }
